# yrr

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  yrr.toml
crates/yrr-bus/: Cargo.toml
crates/yrr-bus/src/: bus.rs  lib.rs  mapper.rs  zenoh_bus.rs
crates/yrr-cli/: Cargo.toml
crates/yrr-cli/src/: main.rs
crates/yrr-core/: Cargo.toml
crates/yrr-core/src/: config.rs  error.rs  lib.rs  loader.rs  message.rs  runtime.rs  schema.rs  validation.rs
crates/yrr-runtime/: Cargo.toml
crates/yrr-runtime/src/: claude.rs  dispatcher.rs  events.rs  lib.rs  orchestrator.rs  sidecar.rs  signal_parser.rs
crates/yrr-tui/: Cargo.toml
crates/yrr-tui/src/: app.rs  event.rs  main.rs
crates/yrr-tui/src/graph/: layout.rs  mod.rs  model.rs
crates/yrr-tui/src/ui/: graph.rs  info_panel.rs  inspect.rs  logs.rs  mod.rs  prompt_input.rs  quit_confirm.rs  seed_input.rs  status_bar.rs  steer_input.rs  theme.rs
docs/: README.md
docs/architecture/: system-overview.md
docs/design/: declarative-format.md  principles.md
docs/reference/: agent-fields.md
examples/app-factory/: swarm.yaml
examples/app-factory/agents/: architect.yaml  developer.yaml  planner.yaml  qa.yaml  scrum-master.yaml
examples/bug-hunt/: swarm.yaml
examples/bug-hunt/agents/: developer.yaml  dispatcher.yaml  logic-researcher.yaml  perf-researcher.yaml  qa.yaml  security-researcher.yaml
examples/design-debate/: swarm.yaml
examples/design-debate/agents/: critic.yaml  designer.yaml
examples/dev-qa/: swarm.yaml
examples/dev-qa/agents/: developer.yaml  fixer.yaml  qa.yaml
examples/full-stack/: swarm.yaml
examples/full-stack/agents/: api-qa.yaml  backend-dev.yaml  frontend-dev.yaml  integrator.yaml  plan-reviewer.yaml  planner.yaml  qa-lead.yaml  scrum-master.yaml  security-qa.yaml  ux-qa.yaml
examples/parallel-review/: swarm.yaml
examples/parallel-review/agents/: aggregator.yaml  perf-reviewer.yaml  security-reviewer.yaml  style-reviewer.yaml
