[workspace]
members = [
    "crates/yrr-core",
    "crates/yrr-bus",
    "crates/yrr-runtime",
    "crates/yrr-cli",
    "crates/yrr-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/aaguirre/yrr"

[workspace.dependencies]
# Internal crates
yrr-core = { path = "crates/yrr-core" }
yrr-bus = { path = "crates/yrr-bus" }
yrr-runtime = { path = "crates/yrr-runtime" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"

# Async
tokio = { version = "1.51", features = ["full"] }
async-trait = "0.1"

# Communication
zenoh = "1.8"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Random
rand = "0.9"

# Errors
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async utilities
futures = "0.3"
