[package]
name = "yrr-bus"
description = "Signal bus abstraction and Zenoh implementation for yrr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yrr-core = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
