[package]
name = "yrr-core"
description = "Core types, traits, and schema for the yrr agent orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
