[package]
name = "yrr-runtime"
description = "Agent lifecycle, sidecar, and runtime backends for yrr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yrr-core = { workspace = true }
yrr-bus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
